# diablo

./: .gitignore  .hgignore  ACKNOWLEDGEMENTS  AUTHORS  CMakeLists.txt  Compaction.cmake  INSTALL.DIABLO  README  build_obj.sh
anopt/diabloanopt/: CMakeLists.txt  diabloanopt.c  diabloanopt.h  diabloanopt.hpp  diabloanopt_cmdline.opt  diabloanopt_constprop.c  diabloanopt_constprop.h  diabloanopt_copy_analysis.c  diabloanopt_copy_analysis.h  diabloanopt_extended_copy.c  diabloanopt_extended_copy.h  diabloanopt_factor.c  diabloanopt_factor.h  diabloanopt_factor_helpers.cc  diabloanopt_factor_helpers.h  diabloanopt_factor_helpers.hpp  diabloanopt_liveness.c  diabloanopt_liveness.h  diabloanopt_misc.c  diabloanopt_misc.h  diabloanopt_procstate.c  diabloanopt_procstate.h
aspire/: CMakeLists.txt  aspire.opt  aspire_frontend_common.h  version.cc  version.h
aspire/BLP00/: diablo_aspire_blp00_main.cc
aspire/BLP01/: diablo_aspire_blp01_main.cc
aspire/BLP04/: diablo_aspire_blp04_main.cc
aspire/attestation/: CMakeLists.txt  attestation.cc  attestation.h  attestation_area.cc  attestation_area.h  attestation_json.cc  attestation_json.h
aspire/callstack_checks/: CMakeLists.txt  callstack_checks.cc  callstack_checks.h
aspire/code_mobility/: CMakeLists.txt  code_mobility.cc  code_mobility.h  code_mobility_cmdline.opt  code_mobility_json.cc  code_mobility_json.h  mobile-code-cleaner
aspire/diablosoftvm/: CMakeLists.txt  diablosoftvm.cc  diablosoftvm.h  diablosoftvm_cmdline.opt  diablosoftvm_json.h  diablosoftvm_jsonprinter.cc  diablosoftvm_jsonprinter.h  diablosoftvm_softvm_interface.h  diablosoftvm_vmchunk.cc  diablosoftvm_vmchunk.class.h  diablosoftvm_vmchunk.h  diablosoftvm_wandivm_interface.h
aspire/reaction_mechanisms/: CMakeLists.txt  reaction_mechanisms.cc  reaction_mechanisms.h
aspire/self_debugging/: CMakeLists.txt  self_debugging_cmdline.opt  self_debugging_json.cc  self_debugging_json.h
aspire/softvmproxy/: CMakeLists.txt  api.cc  api.h  client.cc  common.cc  common.h  common_multi.cc  diablo.h  server.cc
aspire/transformer/: CMakeLists.txt  abstract_transformer.cc  abstract_transformer.h  gmrt_transformer.cc  gmrt_transformer.h
diversity/: AUTHORS  CMakeLists.txt  README  configure.ac  diablodiversity.pc.in  diablodiversity.spec.in
diversity/diablodiversity/: CMakeLists.txt  diablodiversity.h  diablodiversity_branch_function.cc  diablodiversity_branch_function.h  diablodiversity_cmdline.opt  diablodiversity_engine.cc  diablodiversity_engine.h  diablodiversity_engine_iterative.cc  diablodiversity_engine_iterative.h  diablodiversity_factor.cc  diablodiversity_factor.h  diablodiversity_flatten.cc  diablodiversity_flatten.h  diablodiversity_flipbranches.cc  diablodiversity_flipbranches.h  diablodiversity_inline.cc  diablodiversity_inline.h  diablodiversity_instructionselection.cc  diablodiversity_instructionselection.h  diablodiversity_layout.cc  diablodiversity_layout.h  diablodiversity_limitinstructionset.cc  diablodiversity_limitinstructionset.h  diablodiversity_opaque.cc  diablodiversity_opaque.h  diablodiversity_random.cc  diablodiversity_random.h  diablodiversity_scheduling.cc  diablodiversity_scheduling.h  diablodiversity_smcfactor.cc  diablodiversity_smcfactor.h  diablodiversity_strategy_scripted.cc  diablodiversity_strategy_singleseed.cc  diablodiversity_strings.cc  diablodiversity_strings.h  diablodiversity_structs.h  diablodiversity_unfold.cc  diablodiversity_unfold.h  diablodiversity_unlimitinstructionset.cc  diablodiversity_unlimitinstructionset.h
flowgraph/: CMakeLists.txt  README
flowgraph/architecture_backends/: CMakeLists.txt
flowgraph/diabloflowgraph/: CMakeLists.txt  diabloflowgraph.c  diabloflowgraph.cc  diabloflowgraph.h  diabloflowgraph.hpp  diabloflowgraph_STL.hpp  diabloflowgraph_bbl.c  diabloflowgraph_bbl.class.h  diabloflowgraph_bbl.h  diabloflowgraph_callgraph.c  diabloflowgraph_callgraph.class.h  diabloflowgraph_callgraph.h  diabloflowgraph_callgraph_edge.class.h  diabloflowgraph_cfg_object.c  diabloflowgraph_cfg_object.h  diabloflowgraph_cmdline.opt  diabloflowgraph_code_layout.c  diabloflowgraph_code_layout.h  diabloflowgraph_complexity.cc  diabloflowgraph_complexity.h  diabloflowgraph_complexity.hpp  diabloflowgraph_dataflow.c  diabloflowgraph_dataflow.h  diabloflowgraph_description.c  diabloflowgraph_description.h  diabloflowgraph_dominator.c  diabloflowgraph_dominator.h  diabloflowgraph_edge.c  diabloflowgraph_edge.class.h  diabloflowgraph_edge.h  diabloflowgraph_fake_edge_cycles.cc  diabloflowgraph_fake_edge_cycles.hpp  diabloflowgraph_flowgraph.c  diabloflowgraph_flowgraph.class.h  diabloflowgraph_flowgraph.h  diabloflowgraph_function.c  diabloflowgraph_function.class.h  diabloflowgraph_function.h  diabloflowgraph_ins.c  diabloflowgraph_ins.class.h  (+21 more)
flowgraph/frontend/: diabloflowgraph_frontend.c
flowgraph/test/: diablo_object_test.c
jansson-2.6/: CMakeLists.txt
jansson-2.6/src/: hashtable.c  hashtable_seed.c  lookup3.h  strconv.c  utf.h  value.c
judy/: CMakeLists.txt  Judy.h  Judy.h.check.c  README  sh_build
judy/Judy1/: Judy1.h  README
judy/JudyCommon/: JudyByCount.c  JudyCascade.c  JudyCount.c  JudyCreateBranch.c  JudyDecascade.c  JudyDel.c  JudyFirst.c  JudyFreeArray.c  JudyGet.c  JudyIns.c  JudyInsArray.c  JudyInsertBranch.c  JudyMalloc.c  JudyMallocIF.c  JudyMemActive.c  JudyMemUsed.c  JudyPrevNext.c  JudyPrevNextEmpty.c  JudyPrintJP.c  JudyPrivate.h  JudyPrivate1L.h  JudyPrivateBranch.h  JudyTables.c  README
judy/JudyHS/: JudyHS.c  README
judy/JudyL/: JudyL.h  README
judy/JudySL/: JudySL.c  README
judy/apps/: README
obfuscation/: CMakeLists.txt  backend_template.cc.in  diablo_diversity_main.cc  diablo_obfuscation_main.cc  obfuscation.opt  obfuscation_architecture_backend.cc  obfuscation_architecture_backend.h  obfuscation_json.cc  obfuscation_json.h  obfuscation_transformation.cc  obfuscation_transformation.h
obfuscation/architecture_backends/: CMakeLists.txt
obfuscation/diversity_engine/: CMakeLists.txt  (+12 more)
object/: CMakeLists.txt  README
support/: CMakeLists.txt  README  version.h.in
(+1048 files in other folders)
